# server

./: .dockerignore  .gcloudignore  .gitignore  1.ipynb  Dockerfile  README.md  api.md  build.sh  demo.ipynb  imagebuild.yaml  main.py  pyproject.toml  requirements.txt  setup.py
docs/: CLA.md  api.md
docs/citation/: ATTRIBUTION.md  CITATION.cff  CITE.txt  daylight-factor.bib
example/: 1.ipynb  demo.ipynb
processing/: colorconverter.py  colorscale.py  coord.py  encoder.py  extended_enum.py  external.py  gcs_manager.py  image_manager.py  image_transformer.py  inference.py  pipeline.py  pipeline_config.py  pipelineinput.py  prediction_input.py  processor.py  stats.py  utils.py
processing/steps/: step.py
src/: df_align_image.py  df_image_processing.py  df_inference.py  main.py  utils.py
src/processing/: colorconverter.py  colorscale.py  coord.py  encoder.py  extended_enum.py  external.py  gcs_manager.py  image_manager.py  image_transformer.py  inference.py  pipeline.py  pipelineinput.py  prediction_input.py  processor.py  stats.py  utils.py
src/processing/steps/: step.py
tests/: test_colorconverter.py  test_colorscale.py  test_encoder.py  test_endpoints.py  test_endpoints_real_assets.py  test_image_manager.py  test_image_transformer.py  test_image_validation.py  test_imginput_imgfname.py  test_inference.py  test_input_shape.py  test_pipeline.py  test_pipeline_integration.py  test_pipelineinput.py  test_processor.py  test_scenesettings.py  test_stats.py  test_step.py  test_steps.py  test_translation.py  test_utils.py
