[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
[project]
name = "daylight_factor_backend"
version = "1.0.0"
authors = [
  { name="Upskiller-xyz", email="info@upskiller.xyz" },
]
description = "Backend for Daylight factor estimation tool local deployment."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/upskiller-xyz/server"
Issues = "https://github.com/upskiller-xyz/server/issues"

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''